--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "web-proxy",
+  "name": "enterprise-proxy",
   "version": "2.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
-    "http-proxy": "^1.18.1",
-    "cookie-parser": "^1.4.6"
+    "http-proxy": "^1.18.1"
   }
 }
